Fix z-index in index

--- a/src/style/scss/cmps/LabelsFilter.scss
+++ b/src/style/scss/cmps/LabelsFilter.scss
@@ -1,6 +1,6 @@
 .index-filter-section {
     padding-block: 0.5rem;
-    z-index: 2;
+    z-index: 1;
 
     grid-auto-flow: column;
     grid-gap: 0 1rem;
